# LeanKG

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  leankg.yaml.md  render.yaml.md  run_kilo_ab_final.sh  run_kilo_ab_test.sh
.cargo/: config.toml
.codex/: INSTALL.md
.cursor-plugin/: leankg-bootstrap.md
.docs/planning/: 2026-03-28-path-selector-design.md
.github/workflows/: release.yml
.google-antigravity/: INSTALL.md
.kilo/: INSTALL.md
.opencode/: INSTALL.md  package-lock.json
.opencode/plugins/: leankg.js
ab_benchmark/: README.md
ab_benchmark/prompts/: queries.yaml
ab_benchmark/results/: ab-call-graph_baseline.txt  ab-call-graph_leankg.txt  ab-code-element_baseline.txt  ab-code-element_leankg.txt  ab-context-retrieval_baseline.txt  ab-context-retrieval_leankg.txt  ab-db-schema_baseline.txt  ab-db-schema_leankg.txt  ab-dependency-graph_baseline.txt  ab-dependency-graph_leankg.txt  ab-impact-analysis_baseline.txt  ab-impact-analysis_leankg.txt  ab-indexing-flow_baseline.txt  ab-indexing-flow_leankg.txt  ab-mcp-tools_baseline.txt  ab-mcp-tools_leankg.txt  ab-query-handler_baseline.txt  ab-query-handler_leankg.txt  ab-testreation_baseline.txt  ab-testreation_leankg.txt  ab_results.csv  benchmark_report.md  kilo_ab_report.md
ab_benchmark/scripts/: count_tokens.py  generate_report.py  method_a_baseline.sh  method_b_leankg.sh  run_ab_benchmark.sh  run_ab_test.py  run_ab_test.sh  run_benchmark.sh
benches/: orchestrator_bench.rs  orchestrator_real_bench.rs
benchmark/: README.md
benchmark/prompts/: debugging.yaml  debugging.yaml.md  impact.yaml  impact.yaml.md  implementation.yaml  implementation.yaml.md  navigation.yaml  navigation.yaml.md
benchmark/results/: debug-indexing-failure.json  debug-indexing-failure.md  debug-query-edge.json  debug-query-edge.md  debug-status-tool.json  debug-status-tool.md  find-codeelement-comparison.json  find-codeelement-comparison.md  find-codeelement.json  find-codeelement.md  find-extractor-comparison.json  find-extractor-comparison.md  find-extractor.json  find-extractor.md  find-mcp-handler-comparison.json  find-mcp-handler-comparison.md  find-mcp-handler.json  find-mcp-handler.md  find-query-engine-comparison.json  find-query-engine-comparison.md  find-query-engine.json  find-query-engine.md  impact-handler-change-comparison.json  impact-handler-change-comparison.md  impact-models-change-comparison.json  impact-models-change-comparison.md  impl-new-relationship-comparison.json  impl-new-relationship-comparison.md  impl-new-tool-comparison.json  impl-new-tool-comparison.md  impl-new-tool.json  impl-new-tool.md  impl-search-enhance-comparison.json  impl-search-enhance-comparison.md  impl-search-enhance.json  impl-search-enhance.md
docs/: AGENTS.md  README.md  agentic-instructions.md  architecture.md  cli-reference.md  erd.md  tech-stack.md
docs/analysis/: auto-init-auto-trigger-deep-dive-2026-03-28.md  bug-tracking-2026-03-28.md  claude-code-caching-analysis-2026-04-07.md
docs/design/: hld-leankg.md  hld.md
docs/planning/: PRD.md  PRD_vi.md
docs/requirement/: prd-leankg.md
e2e/: debug.spec.js  filter.spec.js
examples/: README.md
examples/cpp/: utils.cpp  utils_test.cpp
examples/csharp/: Calculator.cs  CalculatorTests.cs
examples/java-api-service/: README.md
examples/kotlin-api-service/: README.md
examples/php/: Auth.php  AuthTest.php
examples/ruby/: user.rb  user_spec.rb
scripts/: install.sh
src/: lib.rs  main.rs
src/api/: auth.rs  handlers.rs  mod.rs
src/benchmark/: data.rs  mod.rs  runner.rs
src/cli/: mod.rs
src/compress/: entropy.rs  litm.rs  mod.rs  modes.rs  reader.rs  session_cache.rs  shell.rs  signatures.rs  symbol_map.rs
src/db/: keys.rs  models.rs  schema.rs
src/embed/: index.html
src/graph/: context.rs  persistent_cache.rs  query.rs  traversal.rs
src/hooks/: mod.rs
src/indexer/: extractor.rs  framework_detector.rs  gradle_extractor.rs  maven_extractor.rs  microservice.rs  mod.rs  parser.rs  process_processor.rs
tests/: business_logic_test.rs  compression_e2e_tests.rs  doc_generation.rs  graph_cache_tests.rs  integration.rs  lib.rs  mcp_tests.rs  orchestrator_e2e.rs  pipeline_integration_tests.rs  runtime_e2e_tests.rs
(+32 files in other folders)
