[package]
name = "leankg"
version = "0.1.6"
edition = "2021"
description = "Lightweight Knowledge Graph for AI-Assisted Development"
license = "MIT"
repository = "https://github.com/FreePeak/LeanKG"
homepage = "https://github.com/FreePeak/LeanKG"
documentation = "https://github.com/FreePeak/LeanKG"
readme = "README.md"
keywords = ["knowledge-graph", "wasm", "ai"]
categories = ["command-line-utilities", "data-structures", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
glob = "0.3"
futures-util = "0.3"
sha2 = "0.10"
pulldown-cmark = "0.12"
regex = "1"
schemars = "0.8"
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cozo = "0.2"
notify = "7"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-core = "0.4"
headers = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
tempfile = "3"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
