[package]
name = "leankg"
version = "0.8.3"
edition = "2021"
description = "Lightweight Knowledge Graph for AI-Assisted Development"
license = "MIT"
repository = "https://github.com/FreePeak/LeanKG"
homepage = "https://github.com/FreePeak/LeanKG"
documentation = "https://github.com/FreePeak/LeanKG"
readme = "README.md"
keywords = ["knowledge-graph", "ai"]
categories = ["command-line-utilities", "data-structures"]

[lib]
crate-type = ["rlib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
glob = "0.3"
futures-util = "0.3"
sha2 = "0.10"
rayon = "1.10"
pulldown-cmark = "0.12"
regex = "1"
schemars = "0.8"
async-trait = "0.1"
dirs = "5"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
cozo = "0.2"
notify = "7"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"

[dev-dependencies]
tempfile = "3"
